# AI-Powered-Blog-Summary-to-Spoken-Audio-Converter

./: Dockerfile  README.md  app.py  blog_summarizer.py  pyproject.toml  requirements.txt
