[project]
name = "AI-Powered-Blog-Summary-to-Spoken-Audio-Converter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "crewai[google-genai]>=1.9.3",
    "crewai-tools>=1.9.3",
    "firecrawl-py>=4.18.0",
    "google-generativeai>=0.8.6",
    "litellm>=1.75.3",
    "gradio>=6.8.0",
    "elevenlabs>=2.37.0",
]
